src/test/testFiles/valid/arrayReturn.manimdsl
fun func(): Array<number> {
    let x = Array<number>(3);
    return x;
}

let x = func();
x[0] = 3;