src/test/testFiles/invalid/semanticErrors/stepOverConditionNotBool.manimdsl
fun move(n: number, source: Stack<number>, target: Stack<number>, aux: Stack<number>) {
    if(n > 0) {
        move(n - 1, source, aux, target);
        target.push(source.pop());
        move(n - 1, aux, target, source);
    }
}

let C = Stack<number>();
let B = Stack<number>();
let A = Stack<number>();
@stepInto(3) {
move(3, A, B, C);
}